fix riff stamp formatting to be human readable
also add createRiff to index route

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,10 @@ body {
   };
 }
 
+.container {
+  margin: 0;
+}
+
 .create-riff-box {
   height: 33px;
   margin-top: 2px;
